force-app/main/default/objects/Plan_Stakeholder__c/Plan_Stakeholder__c.object-meta.xml
<CustomObject>
    <description>Relationship map entry: a contact's role, influence and sentiment within an Account Plan. Feeds the stakeholder heat-map LWC.</description>
    <label>Plan Stakeholder</label>
    <nameField>
        <displayFormat>STK-{0000000}</displayFormat>
        <label>Stakeholder ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Stakeholders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>