force-app/main/default/objects/Plan_Stakeholder__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Account Plan</label>
    <type>MasterDetail</type>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipName>Stakeholders</relationshipName>
    <relationshipLabel>Stakeholders</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>