force-app/main/default/objects/Plan_Stakeholder__c/fields/Buying_Center__c.field-meta.xml
<CustomField>
    <fullName>Buying_Center__c</fullName>
    <label>Buying Center</label>
    <type>Text</type>
    <length>120</length>
</CustomField>