force-app/main/default/objects/Plan_Stakeholder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Plan_Stakeholders</relationshipName>
    <relationshipLabel>Plan Stakeholders</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>