force-app/main/default/objects/Plan_Stakeholder__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <label>Reports To</label>
    <description>Self-lookup for the org chart / influence map.</description>
    <type>Lookup</type>
    <referenceTo>Plan_Stakeholder__c</referenceTo>
    <relationshipName>Direct_Reports</relationshipName>
    <relationshipLabel>Direct Reports</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>