force-app/main/default/objects/Plan_Stakeholder__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <label>Sentiment</label>
    <description>Champion / Supporter / Neutral / Detractor. History enabled for sentiment-shift tracking (QBR).</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Champion</fullName><default>false</default><label>Champion</label></value>
            <value><fullName>Supporter</fullName><default>false</default><label>Supporter</label></value>
            <value><fullName>Neutral</fullName><default>true</default><label>Neutral</label></value>
            <value><fullName>Detractor</fullName><default>false</default><label>Detractor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>