force-app/main/default/objects/Plan_Stakeholder__c/fields/Stakeholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Name__c</fullName>
    <label>Stakeholder Name</label>
    <description>Display name (denormalised from Contact for the heat-map, or typed directly).</description>
    <type>Text</type>
    <length>120</length>
</CustomField>