force-app/main/default/objects/Plan_Stakeholder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stakeholder_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Influence__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Buying_Center__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>